# stm_server

./: .gitignore  CONTRIBUTOR_AGREEMENT.md  Cargo.toml  README.md  stmpg_prod.session.sql
db_scripts/es/: anon_access.txt  dev_idx_mapping.json  search_log_idx_mapping.json
db_scripts/es/queries/: reindex.txt  search_log.txt
db_scripts/sql/: create_tables.sql  stm_add_email.sql  stm_add_ip_log.sql  stm_complete_dev_job.sql  stm_find_projects_by_commits.sql  stm_get_all_ips.sql  stm_get_dev_jobs.sql  stm_get_latest_project_commit.sql  stm_queue_up_dev_report.sql
inbox/src/: config.rs  handler.rs  s3.rs
sql/: create_tables.sql  stm_add_commit.sql  stm_add_email.sql  stm_complete_dev_job.sql  stm_find_projects_by_commits.sql  stm_get_dev_jobs.sql  stm_get_latest_project_commit.sql  stm_give_up_on_dev.sql  stm_queue_up_dev_report.sql
src/: config.rs  handler.rs  main.rs  s3.rs
stm_graphql/: Cargo.toml  README.md  deploy.sh  schema.graphql
stm_graphql/samples/: options_request.json  post_request.json  schema.graphql
stm_graphql/samples/es-responses/: dev_count_for_stack.json  dev_list_for_stack.json  keyword_suggester.json  matching_dev_list.json
stm_graphql/samples/gql-responses/: devCountForStack.gql.json  devListForStack.gql.json  devsPerLanguage.gql.json  keywordSuggester.gql.json
stm_graphql/samples/sample-responses/: devs_per_language.json
stm_graphql/src/: api_gw_request.rs  api_gw_response.rs  authorizer.rs  config.rs  elastic.rs  handler.rs  http_options.rs  http_options_handler.rs  main.rs  types.rs
stm_graphql/src/graphql/: mod.rs  query.rs  query_devs_per_language.rs
stm_graphql/src/handlers/: home.rs  mod.rs
stm_html_ui/: Cargo.toml  README.md  deploy.sh
stm_html_ui/samples/: apigw-req-dev-id.json  apigw-req-search.json  apigw-reques.json  cf-req-1.json  cf-req-2.json  cf-req-3.json  cf-req-4.json  es_stack_doc_counts.json  report-rimutaka-gh.json  report-rimutaka-private.json  report-rimutaka.json
stm_html_ui/src/: config.rs  elastic.rs  handler.rs  main.rs  search_log.rs  tera_fns.rs
stm_html_ui/src/html/: anon_dev_profile.rs  dev_new.rs  dev_profile.rs  dev_search.rs  gh_login_profile.rs  home.rs  html_data.rs  keyword.rs  mod.rs  org_list.rs  org_profile.rs  orgs.rs  public_dev_profile.rs  recent.rs  related.rs  stats.rs
stm_html_ui/templates/: 404.html  dev.html  dev_new.html  dev_profile.html  dev_search.html  home.html  keyword.html  org_list.html  org_profile.html  orgs.html  related.html  stats.html
stm_html_ui/templates/includes/: dev-card.html  footer.html  head.html  org-card.html  top-nav.html  truncated_search_msg.html
stm_inbox/: Cargo.toml  README.md  api-req-sample.json
stm_inbox/src/: config.rs  handler.rs  s3.rs
stm_inbox_flows/: Cargo.toml  README.md  config_schema.json
stm_inbox_flows/scripts/dev/: app-to-s3.sh
stm_inbox_flows/scripts/es/: contributor_idx_mapping.json  dev_idx_mapping.json
stm_inbox_flows/scripts/prod/: cleanup.sh  crontab.bak  mkdirs.sh  stm_inbox_flows.sh  stm_inbox_flows_bootstrap.sh
stm_inbox_flows/src/: config.rs  dev_profile.rs  gh_login.rs  jobs.rs  main.rs
stm_inbox_flows/src/config/: deser.rs
stm_inbox_flows/src/flows/: dev_queue.rs  help.rs  mod.rs
stm_inbox_flows/src/utils/: mod.rs  pgsql.rs  queues.rs  s3.rs
stm_inbox_flows/src/utils/elastic/: mod.rs  types.rs
stm_inbox_router/: Cargo.toml  README.md  s3_event.json
stm_inbox_router/src/: config.rs  handler.rs  main.rs  postgres.rs  s3.rs
stm_mono_service/: Cargo.toml  README.md  config-schema.json  deploy.sh
stm_mono_service/scripts/dev/: app-to-s3.sh
stm_mono_service/scripts/vm_bootstrap/: cleanup.sh  crontab.bak  mkdirs.sh  stm_mono_service.sh  stm_mono_service_bootstrap.sh
stm_mono_service/src/: config.rs  main.rs
stm_mono_service/src/config/: deser.rs
stm_mono_service/src/db/: bots.rs  mod.rs
stm_mono_service/src/flows/: mod.rs  www_log_reader.rs
stm_shared/: Cargo.toml  README.md
stm_shared/src/: lib.rs  pgsql.rs  s3.rs  sqs.rs
stm_shared/src/aws_events/: s3.rs
stm_shared/src/elastic/: mod.rs  types.rs  types_aggregations.rs  types_hits.rs  types_search_log.rs  types_source.rs  validators.rs
stm_shared/src/graphql/: mod.rs
stm_vue_ui/: .eslintrc.js  .graphqlconfig  README.md  index.html  package-lock.json  package.json  tsconfig.json
stm_vue_ui/public/: index.html
stm_vue_ui/src/: App.vue  formatters.ts  main.ts
stm_vue_ui/src/components/: DevCard.vue  DevCounts.vue  DevSearch.vue  DevsPerTech.vue  Footer.vue  FooterBlock.vue  HelloWorld.vue  KeywordSearch.vue  LinkedInLogin.vue  Login.vue  MatchingDevsCount.vue  MatchingDevsList.vue  MatchingDevsPagination.vue  SearchTabs.vue  Shortlist.vue
stm_vue_ui/src/components/explainers/: AboutStm.vue
stm_vue_ui/src/graphql/: queries.ts
stm_vue_ui/src/router/: index.ts
stm_vue_ui/src/store/: index.ts  mutations.ts
stm_vue_ui/src/stores/: QueryStore.ts
stm_vue_ui/src/views/: About.vue  AboutView.vue  Home.vue  HomeView.vue
