[package]
name = "stm_graphql"
version = "0.1.1"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
log = "0.4"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
lambda-debug-proxy-client = {git = "https://github.com/rimutaka/lambda-debug-proxy.git"}
hyper = { version = "0.14", features = ["http2"] }
hyper-rustls = "0.23"
regex = "1.5"
bs58 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rusoto_signature = "0.47"
rusoto_sqs = { version = "0.47", features = ["rustls"], default-features = false }
rusoto_core = { version = "0.47", features = ["rustls"], default-features = false }
futures = "0.3"
urlencoding = "2.1"
minify = "1.3.0"
sysinfo = "0.23"
jsonwebtoken = "8"
stm_shared = { version = "0.1", path = "../stm_shared" }
