[package]
name = "stm_inbox"
version = "0.1.1"
authors = ["rimutaka <max@onebro.me>"]
edition = "2018"
homepage = "https://stackmuncher.com"
repository = "https://github.com/stackmuncher/stm_inbox"
license = "AGPL-3.0-or-later"
description = "An AWS Lambda function for storing StackMuncher reports in AWS S3. The reports are sent by StackMuncher client app (https://github.com/stackmuncher/stm)."

[dependencies]
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.6", features = ["full"] }
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = "0.2.18"
log = "0.4.14"
lambda_runtime = { git = "https://github.com/awslabs/aws-lambda-rust-runtime.git" }
hyper = { version = "0.14.7", features = ["http2"] }
hyper-rustls = "0.22.1"
rusoto_signature = "0.46.0"
rusoto_sqs = { version = "0.46.0", features = ["rustls"], default-features = false }
rusoto_core = { version = "0.46.0", features = ["rustls"], default-features = false }
rusoto_s3 = { version = "0.46.0", features = ["rustls"], default-features = false }
base64 = "0.13.0"
bs58 = "0.4.0"
ring = "0.16.20"
chrono = { version = "0.4.19" }
